Added lambdas and stuff